// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the round back button matches the snapshot 1`] = `
<a
  className="beSAdU"
  enabledStyle={true}
  href="/"
  iconSize="24px"
  onClick={[Function]}
>
  ButtonValue
</a>
`;

exports[`the round back button with button type given matches the snapshot 1`] = `
<a
  className="beSAdU"
  enabledStyle={true}
  href="/"
  iconSize="24px"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</a>
`;
